@@ -1,16 +1,41 @@
 plugins {
     id 'java'
+    id 'idea'
+    id 'io.franzbecker.gradle-lombok' version '2.1'
+    id 'org.springframework.boot' version '2.1.3.RELEASE'
 }
 
-group 'jm'
+apply plugin: 'io.spring.dependency-management'
+
+lombok {
+    version = "1.18.6"
+    sha256 = ""
+}
+
+group 'pl.jm'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 10
 
 repositories {
     mavenCentral()
 }
 
+test {
+    println("in test")
+    jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
+    jvmArgs('--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED')
+    jvmArgs('--illegal-access', 'warn')
+}
+
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.springframework.boot:spring-boot-starter-data-jpa"
+    runtimeOnly 'com.h2database:h2'
+
+    compileOnly 'org.projectlombok:lombok:1.18.6'
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
+
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testCompile 'io.rest-assured:rest-assured:3.0.0'
 }
